# NLP_Analysis_n-gram

./: .gitignore  BiGram.cpp  BiGram.hpp  CMakeLists.txt  COMP472_miniproject3  LanguageModel.cpp  LanguageModel.hpp  MyException.cpp  MyException.hpp  README.md  SentenceClassifier.cpp  SentenceClassifier.hpp  UniGram.cpp  UniGram.hpp  bigramEN.txt  bigramFR.txt  bigramOT.txt  input.txt  launch.txt  main.cpp  out10.txt  out11.txt  out12.txt  out13.txt  out14.txt  out15.txt  out16.txt  out17.txt  out18.txt  out19.txt  out20.txt  out21.txt  out22.txt  out23.txt  out24.txt  out25.txt  out26.txt  out27.txt  out28.txt  out29.txt  (+13 more)
TrainingCorpusENandFRandEUS/: eus-gosea_lagun_laguna.txt
